# ash-flare

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  architecture.md  ash-flare-demo-20251115_115529.cast  ash-flare-demo-20251115_115642.cast  iot-fleet-demo-20251026_131129.cast  record_asciinema.sh  run_iot_demo.sh
benches/: supervision_benchmark.rs
examples/: cluster_control.rs  counter.rs  distributed.rs  dynamic_workers.rs  http_monitor.rs  interactive_demo.rs  iot_device.rs  large_tree.rs  mailbox_macro.rs  mailbox_p2p.rs  mailbox_pool.rs  notification_fanout.rs  process_monitor.rs  regional_eu_west.rs  regional_us_west.rs  shared_resource.rs  start_link_demo.rs  stateful_example.rs  stateful_macro_demo.rs  super_tree.rs  telemetry_processor.rs  tmux_demo.rs  transcode_farm.rs  tree_visualizer.rs  worker_queue.rs
src/: distributed.rs  lib.rs  macros.rs  mailbox.rs  restart.rs  supervisor.rs  supervisor_common.rs  supervisor_stateful.rs  types.rs  worker.rs
src/supervisor/: child.rs  error.rs  handle.rs  runtime.rs  spec.rs
tests/: coverage_main.rs  distributed_tests.rs  restart_tests.rs  stateful_tests.rs  supervisor_tests.rs  worker_tests.rs
tests/coverage/: distributed.rs  error.rs  handle.rs  mod.rs  restart.rs  stateful_supervisor.rs  supervisor.rs  types.rs  worker_context.rs  workers.rs
