[package]
name = "ash-flare"
version = "1.0.0"
edition = "2024"
autoexamples = false
exclude = ["*.sh", "*.cast", "architecture.md"]
license = "MIT"
description = "Erlang/OTP-inspired supervision trees for Rust with distributed capabilities"
repository = "https://github.com/gntem/ash-flare"
keywords = ["supervisor", "erlang", "otp", "actor", "fault-tolerance"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"

[[example]]
name = "http_monitor"
path = "examples/http_monitor.rs"

[[example]]
name = "cluster_control"
path = "examples/cluster_control.rs"

[[example]]
name = "super_tree"
path = "examples/super_tree.rs"

[[example]]
name = "tree_visualizer"
path = "examples/tree_visualizer.rs"

[[example]]
name = "interactive_demo"
path = "examples/interactive_demo.rs"

[[example]]
name = "tmux_demo"
path = "examples/tmux_demo.rs"

# Regional supervisor binaries
[[bin]]
name = "regional-supervisor-us-west"
path = "examples/regional_us_west.rs"

[[bin]]
name = "regional-supervisor-eu-west"
path = "examples/regional_eu_west.rs"


