[package]
name = "ash-flare"
version = "1.0.4"
edition = "2024"
authors = ["gntem"]
autoexamples = false
exclude = ["*.sh", "*.cast", "architecture.md"]
license = "MIT"
description = "Fault-tolerant supervision trees for Rust with distributed capabilities inspired by Erlang/OTP"
documentation = "https://docs.rs/ash-flare"
homepage = "https://github.com/gntem/ash-flare"
repository = "https://github.com/gntem/ash-flare"
readme = "README.md"
keywords = ["supervisor", "fault-tolerance", "resilience", "distributed"]
categories = ["asynchronous", "concurrency"]
rust-version = "1.85"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
rand = "0.9"
slog = "2.7"
slog-async = "2.8"
slog-term = "2.9"
slog-scope = "4.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "supervision_benchmark"
harness = false

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"

[[example]]
name = "http_monitor"
path = "examples/http_monitor.rs"

[[example]]
name = "cluster_control"
path = "examples/cluster_control.rs"

[[example]]
name = "super_tree"
path = "examples/super_tree.rs"

[[example]]
name = "tree_visualizer"
path = "examples/tree_visualizer.rs"

[[example]]
name = "interactive_demo"
path = "examples/interactive_demo.rs"

[[example]]
name = "tmux_demo"
path = "examples/tmux_demo.rs"

[[example]]
name = "worker_queue"
path = "examples/worker_queue.rs"

[[example]]
name = "process_monitor"
path = "examples/process_monitor.rs"

[[example]]
name = "telemetry_processor"
path = "examples/telemetry_processor.rs"

[[example]]
name = "transcode_farm"
path = "examples/transcode_farm.rs"

[[example]]
name = "notification_fanout"
path = "examples/notification_fanout.rs"

[[example]]
name = "shared_resource"
path = "examples/shared_resource.rs"

[[example]]
name = "dynamic_workers"
path = "examples/dynamic_workers.rs"

[[example]]
name = "stateful_example"
path = "examples/stateful_example.rs"

[[example]]
name = "stateful_macro_demo"
path = "examples/stateful_macro_demo.rs"

[[example]]
name = "large_tree"
path = "examples/large_tree.rs"
